# playwright-pytest

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: main.yml
pages/locators/: base_page_locators.py  login_page_locators.py  main_page_locators.py  products_page_locators.py
pages/page_objects/: base_page.py  login_page.py  main_page.py  products_page.py
tests/: test_login_page.py  test_main_page.py
